# an-asteracea-app

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deny_warnings.yml
src/: app.rs  lib.rs
tests/: meta_readme.rs
