[package]
name = "an-asteracea-app"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A simple SPA project to work on boilerplate reduction."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/an-asteracea-app"
homepage = "https://github.com/Tamschi/an-asteracea-app/tree/v0.0.1"
documentation = "https://docs.rs/an-asteracea-app/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/an-asteracea-app" }
is-it-maintained-open-issues = { repository = "Tamschi/an-asteracea-app" }
maintenance = { status = "experimental" }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
